--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.120 2013/07/22 07:40:44 gilles Exp gilles $
+# $Id: TODO,v 1.122 2013/08/03 02:08:33 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -11,16 +11,14 @@ Add a best practice migration tips document.
 
 Write a Mail::imapsync package and use it.
 
-
-Fix the mailing-list archive bug with From at
-the beginning of a line
-http://www.linux-france.org/prj/imapsync_list/msg00307.html
-
 Evaluate 
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
 http://www.migrationwiz.com/
 http://www.microsoft.com/download/en/details.aspx?id=1329 "Microsoft Transporter Suite"
+
+Print the timeout value. 
+Inform --timeout is is seconds.
 
 Add an exit value when exiting because of --exitwhenover
 The goal is to know easily why to restart later.
@@ -43,9 +41,15 @@ on some Unix at reboot)
 
 Add a FAQ entry about long path over than 260 character on Win32. 
 
-Fix long path over than 260 character on Win32. 
+Fix long path over than 260 character on Win32 with --usecache
+Fix inode crunching with --usecache
 Think about Digest::SHA or Digest::SHA::PurePerl.
 Think about a file database like DBM instead.
+Look at https://en.wikipedia.org/wiki/Radix_tree (David M advice)
+Look at leveldb (Simon Th actux advice)
+Look at http://fallabs.com/kyotocabinet/ (JYB advice)
+Also Redis (Ludovic Danigo advice)
+
 
 Find a way to avoid passwords in --debugimap unless needed.
 
@@ -124,9 +128,7 @@ vs 250s avec la version 1.217". Marc Jauvin
 
 Add LITERAL+ [RFC 2088] support to imapsync.
 
-Add an entry to
-http://lsm.execpc.com/lsm/
-See template lsm.imapsync
+Make a m4 file for lsm.imapsync and generate it at each public release.
 
 Add an option to tell imapsync that the domain
 is changing and have it replace the domain in all user names that are
@@ -149,6 +151,13 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
+
+DONE. Add an entry to http://lsm.qqx.org/lsm/
+See lsm.imapsync
+
+DONE. Fix the mailing-list archive bug with From at
+the beginning of a line
+http://www.linux-france.org/prj/imapsync_list/msg00307.html
 
 DONE. Remove 2.2.9 Mail::IMAPClient support.
 
