--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.122 2013/08/03 02:08:33 gilles Exp gilles $
+# $Id: TODO,v 1.123 2013/08/16 00:49:52 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -17,8 +17,14 @@ http://www.yippiemove.com/
 http://www.migrationwiz.com/
 http://www.microsoft.com/download/en/details.aspx?id=1329 "Microsoft Transporter Suite"
 
-Print the timeout value. 
-Inform --timeout is is seconds.
+Convert folder names to utf-8 and print them next to the uft-7 ones.
+Look at imapsync/W/learn/ 
+./imap_utf7 data_utf7
+
+DONE. Inform about --addheader when the problem occurs "(no wanted headers so we ignore this message)"
+
+DONE. Print the timeout value. 
+DONE. Inform --timeout is is seconds.
 
 Add an exit value when exiting because of --exitwhenover
 The goal is to know easily why to restart later.
@@ -49,6 +55,13 @@ Look at https://en.wikipedia.org/wiki/Radix_tree (David M advice)
 Look at leveldb (Simon Th actux advice)
 Look at http://fallabs.com/kyotocabinet/ (JYB advice)
 Also Redis (Ludovic Danigo advice)
+
+I am writing now to suggest that imapsync provide info containing the parameters
+with which a message is determined to be a duplicate, so that if I wanted to confirm
+they are in fact duplicates by looking at the messages themselves, enough info would
+be available to easily locate them.  One or two duplicates per folder are easy to
+find, but I had one large folder with quite a few, and in this case it would have
+been a big help.
 
 
 Find a way to avoid passwords in --debugimap unless needed.
