--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.555 $
+    $Revision: 1.564 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -92,7 +92,7 @@ USAGE
                [--nofoldersizes] [--nofoldersizesatend] 
                [--dry]
                [--debug] [--debugimap][--debugimap1][--debugimap2]
-               [--timeout <int>] [--fast]
+               [--timeout <int>] 
                [--split1] [--split2] 
                [--reconnectretry1 <int>] [--reconnectretry2 <int>]
                [--noreleasecheck]
@@ -317,7 +317,7 @@ IMAP SERVERS
      - Hotmail since hotmail.com does not provide IMAP access
      - Outlook.com since outlook.com does not provide IMAP access
 
-    Success stories reported with the following 53 imap servers (software
+    Success stories reported with the following 55 imap servers (software
     names are in alphabetic order):
 
      - 1und1 H mimap1 84498 [host1] H mibap4 95231 [host1]
@@ -325,6 +325,7 @@ IMAP SERVERS
      - Apple Server 10.6 Snow Leopard [host1]
      - Archiveopteryx 2.03, 2.04, 2.09, 2.10 [host2], 3.0.0 [host2]
        (OSL 3.0) http://www.archiveopteryx.org/
+     - Atmail 6.x [host1]
      - Axigen Mail Server Version 8.0.0
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
      - CommuniGatePro server (Redhat 8.0) (Solaris), CommuniGate Pro 5.2.17[host2] (CentOS 5.4)
@@ -373,6 +374,7 @@ IMAP SERVERS
      - OpenWave
      - Oracle Beehive [host1]
      - Qualcomm Worldmail (NT)
+     - QQMail IMAP4Server [host1] [host2] https://en.mail.qq.com/
      - Rockliffe Mailsite 5.3.11, 4.5.6
      - Samsung Contact IMAP server 8.5.0
      - Scalix v10.1, 10.0.1.3, 11.0.0.431, 11.4.6
@@ -464,5 +466,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.555 2013/07/23 11:41:10 gilles Exp gilles $
+    $Id: imapsync,v 1.564 2013/08/18 19:28:47 gilles Exp gilles $
 
