--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,30 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.564
+head: 1.567
 branch:
 locks: strict
-	gilles: 1.564
+	gilles: 1.567
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 564;	selected revisions: 564
+total revisions: 567;	selected revisions: 567
 description:
 ----------------------------
-revision 1.564	locked by: gilles;
+revision 1.567	locked by: gilles;
+date: 2013/09/18 20:38:10;  author: gilles;  state: Exp;  lines: +8 -7
+Fixed a warning when RFC822.SIZE is null or undef.
+----------------------------
+revision 1.566
+date: 2013/09/13 13:23:41;  author: gilles;  state: Exp;  lines: +11 -12
+Added --authmech EXTERNAL. Not tested yet.
+----------------------------
+revision 1.565
+date: 2013/09/13 01:16:20;  author: gilles;  state: Exp;  lines: +8 -6
+Fusemail success.
+RackSpace success.
+----------------------------
+revision 1.564
 date: 2013/08/18 19:28:47;  author: gilles;  state: Exp;  lines: +114 -22
 Adapted behavior for allowing --maxdate --mindate with --noabletosearch. Use internat date instead of Date: header.
 ----------------------------
