--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.564 $
+    $Revision: 1.567 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -349,6 +349,7 @@ IMAP SERVERS
      - Dovecot 0.99.10.4, 0.99.14, 0.99.14-8.fc4, 1.0-0.beta2.7, 
        1.0.0 [dest/source] (LGPL) (http://www.dovecot.org/)
      - Eudora WorldMail v2
+     - Fusemail imap.fusemail.net:143 (https://www.fusemail.com/).
      - Gimap (Gmail imap)
      - GMX IMAP4 StreamProxy.
      - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
@@ -375,9 +376,11 @@ IMAP SERVERS
      - Oracle Beehive [host1]
      - Qualcomm Worldmail (NT)
      - QQMail IMAP4Server [host1] [host2] https://en.mail.qq.com/
+     - RackSpace hoster secure.emailsrvr.com:993 http://www.rackspace.com/
      - Rockliffe Mailsite 5.3.11, 4.5.6
      - Samsung Contact IMAP server 8.5.0
      - Scalix v10.1, 10.0.1.3, 11.0.0.431, 11.4.6
+     - Sendmail Mail Store IMAP4rev1 (5.5.6/mstore-5-5-build-1874 [host1].
      - SmarterMail, Smarter Mail 5.0 Enterprise, Smarter Mail 5.5 [host1], SmarterMail Professional 10.2 [host1].
      - Softalk Workgroup Mail 7.6.4 [host1].
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
@@ -466,5 +469,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.564 2013/08/18 19:28:47 gilles Exp gilles $
+    $Id: imapsync,v 1.567 2013/09/18 20:38:10 gilles Exp gilles $
 
