--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,27 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.567
+head: 1.569
 branch:
 locks: strict
-	gilles: 1.567
+	gilles: 1.569
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 567;	selected revisions: 567
+total revisions: 569;	selected revisions: 569
 description:
 ----------------------------
-revision 1.567	locked by: gilles;
+revision 1.569	locked by: gilles;
+date: 2013/10/16 21:58:17;  author: gilles;  state: Exp;  lines: +125 -39
+Fixed bug on Windows with --tmpdir "E:\TEMP". The colon was badly converted to _, ending with "E_\TEMP".
+The fix also automatically moves the old cache to the new one if the new does not exist yet.
+Fix. Example for --delete2foldersonly "/Junk$/" in help message.
+----------------------------
+revision 1.568
+date: 2013/09/28 02:43:51;  author: gilles;  state: Exp;  lines: +25 -13
+Bug fix. On Win32 trailing blanc in cache dir name raized an error. Blanc now move to underscore _.
+----------------------------
+revision 1.567
 date: 2013/09/18 20:38:10;  author: gilles;  state: Exp;  lines: +8 -7
 Fixed a warning when RFC822.SIZE is null or undef.
 ----------------------------
