--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.567 $
+    $Revision: 1.569 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -317,7 +317,7 @@ IMAP SERVERS
      - Hotmail since hotmail.com does not provide IMAP access
      - Outlook.com since outlook.com does not provide IMAP access
 
-    Success stories reported with the following 55 imap servers (software
+    Success stories reported with the following 57 imap servers (software
     names are in alphabetic order):
 
      - 1und1 H mimap1 84498 [host1] H mibap4 95231 [host1]
@@ -354,6 +354,7 @@ IMAP SERVERS
      - GMX IMAP4 StreamProxy.
      - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
      - hMailServer 5.3.3 [host2], 4.4.1 [host1] (see FAQ)
+     - IceWarp Server 10.4.5 [host1] (http://www.icewarp.com/)
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12, 11.03 [host1]
      - Kerio 7.2.0 Patch 1 [host12], Kerio 8 [host1]
@@ -374,6 +375,7 @@ IMAP SERVERS
      - OpenMail IMAP server B.07.00.k0 (Samsung Contact ?)
      - OpenWave
      - Oracle Beehive [host1]
+     - Parallels Plesk Panel 9.x [host2] 11.x [host2] (http://www.parallels.com/)
      - Qualcomm Worldmail (NT)
      - QQMail IMAP4Server [host1] [host2] https://en.mail.qq.com/
      - RackSpace hoster secure.emailsrvr.com:993 http://www.rackspace.com/
@@ -469,5 +471,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.567 2013/09/18 20:38:10 gilles Exp gilles $
+    $Id: imapsync,v 1.569 2013/10/16 21:58:17 gilles Exp gilles $
 
